--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "draft-js": "^0.11.7",
     "draft-js-wysiwyg": "^1.2.1",
     "draftjs-to-html": "^0.9.1",
